loader constraint message for fields specifies incorrect referring class

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • b17

        The current loader constraint message in linkResolver::check_field_loader_constraints() prints the selected class as the referring class in the message. It should print the current class as the referring class.

              Assignee:
              Harold Seigel (Inactive)
              Reporter:
              Harold Seigel (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: