8202913: loader constraint message for fields specifies incorrect referring class

Improve the message to display the right referring class.

Reviewed-by: acorn, goetz, dholmes